// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component categories-page <CardHeader /> Category completed: > 0 and < 10 questions (quiz in progress) should render CardHeader 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ hesUtF"
  >
    <div
      aria-label="5 questions answered"
      class="sc-gsTCUz eiooQx progress-bar"
      data-testid="progress-bar"
    >
      <span
        class="sc-dlfnbm dyfDju colored "
        data-testid="progress-bar-colored "
      />
      <span
        class="sc-dlfnbm dyfDju colored "
        data-testid="progress-bar-colored "
      />
      <span
        class="sc-dlfnbm dyfDju colored "
        data-testid="progress-bar-colored "
      />
      <span
        class="sc-dlfnbm dyfDju colored "
        data-testid="progress-bar-colored "
      />
      <span
        class="sc-dlfnbm dyfDju colored "
        data-testid="progress-bar-colored "
      />
      <span
        class="sc-dlfnbm dyfDju  "
        data-testid=" "
      />
      <span
        class="sc-dlfnbm dyfDju  "
        data-testid=" "
      />
      <span
        class="sc-dlfnbm dyfDju  "
        data-testid=" "
      />
      <span
        class="sc-dlfnbm dyfDju  "
        data-testid=" "
      />
      <span
        class="sc-dlfnbm dyfDju  "
        data-testid=" "
      />
    </div>
    <span
      aria-label="continue Books quiz (5 questions answered)"
      class="category-card__link"
      role="button"
      tabindex="0"
    >
      continue
    </span>
  </div>
</DocumentFragment>
`;

exports[`Component categories-page <CardHeader /> Category completed: 10 questions (finished quiz) should render CardHeader 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ hesUtF"
  >
    <div
      data-testid="card-header-results"
    >
      7/10
    </div>
    <span
      aria-label="see report for Books (quiz completed)"
      class="category-card__link"
      role="button"
      tabindex="0"
    >
      see report
    </span>
  </div>
</DocumentFragment>
`;
